# local_rag_assistant

./: README.md  app.py  app_refactored.py  chromadb_creation.py  document_manager.py  flask_app.py  llm_query_functions.py  pyproject.toml  rag_system_refactored.py  scrape.py  scrape_web.py  scrapy_scrape.py  temp_docs.py
app/: app.py
local_rag_assistant/: __init__.py  scrape.py
local_rag_assistant/agent/: agent.py
local_rag_assistant/app/: app.py  cli.py
local_rag_assistant/backends/: ollama_backend.py  transformers_backend.py
local_rag_assistant/data/: document_manager.py  rag_database_cli.py  scrapy_scrape.py
local_rag_assistant/rag/: rag_system.py
local_rag_assistant/templates/: index.html
rag/: rag_system.py
templates/: index.html  index_streaming.html
